Fixed header align

--- a/styles/purple.css
+++ b/styles/purple.css
@@ -563,8 +563,6 @@ body {
     margin: 0;
     padding-left: 5px;
     padding-right: 5px;
-    padding-top: 0;
-    padding-bottom: 0;
     vertical-align: middle;
     position: relative;
     overflow: hidden;
@@ -577,13 +575,12 @@ body {
 
 .top li a {
     /* 设置链接内容显示的格式 */
-    display: flex;
+    display: block;
     height: auto;
     width: auto;
     /* 把链接显示为块元素可使整个链接区域可点击 */
     color: var(--title-color);
     text-align: center;
-    vertical-align: middle;
     margin: 0;
     overflow: hidden;
     text-decoration: none;
